K8s/ingress/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robot-shop-jaeger-ingress
  namespace: monitoring
    nginx:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: jaeger.dev.asserts.ai
      http:
        paths:
          - path: /v1/.*
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 4318
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686

  tls:
    - hosts:
        - jaeger.dev.asserts.ai
